<?xml version="1.0" encoding="utf-8"?>
<!-- 
	BerryMotes
	Copyright (C) 2013-2016 Daniel Triendl <trellmor@trellmor.com>
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	 
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

	<string name="app_name">BerryMotes</string>
	<string name="title_activity_sync">BerryMotes Sync</string>
	<string name="menu_info">Info</string>
	<string name="menu_sync">Sync</string>
	<string name="menu_settings">Settings</string>
	<string name="action_report">Report</string>
	<string name="button_sync">Sync</string>
	<string name="button_cancel">Cancel</string>
	<string name="text_status">Status:</string>
	<string name="status_running">Running</string>
	<string name="status_idle">Idle</string>
    <string name="info">"Sync BerryMotes to your android phone.

Select settings from the menu to configure download preferences and select which subreddits to sync. By default BerryMotes will only sync if you are on a Wi-Fi connection.

Select sync from the menu for information about the sync status. The first sync can take a long time, especially if your network connection is slow."</string>
	<string name="send_log_chooser">Send log &#8230;</string>
	<string name="search_subreddits_title">Search</string>
	<string name="text_sync_log">Sync log</string>
	<string name="title_emote_list">Emotes</string>
	<string name="title_emote_detail">Emote Detail</string>
	<string name="emote">Emote</string>
	<string name="action_share">Share</string>
	<string name="loading_image">Loading image&#8230;</string>
	<string name="search_title">Search emotes</string>
	<string name="emotename_copied">Emote code has been copied to clipboard</string>
	<string name="report_send">Report has been send.</string>
	<string name="report_error">Error sending report.</string>
	<string name="text_email">Email</string>
	<string name="reason">Reason</string>
	<string name="hint_optional">Optional</string>
	<string name="send">Send</string>
	<string name="cancel">Cancel</string>
	<string name="report_emote">Report %1$s</string>
	<string name="description">Description</string>
	<string name="log_uploading">Uploading log</string>
	<string name="log_uploaded">Log uploaded</string>
	<string name="log_upload_failed">Log uploaded failed</string>
	<string name="new_subreddit">NEW</string>
	<string name="sort_name">Name</string>
	<string name="sort_size">Size</string>
	<string name="sort_added">Date added</string>
	<string name="title_sort">Sort by</string>
	<string name="sort">Sort</string>

</resources>
