<?xml version="1.0" encoding="utf-8"?>
<!-- 
	BerryMotes
	Copyright (C) 2014-2016 Daniel Triendl <trellmor@trellmor.com>
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	 
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/search"
		android:orderInCategory="100"
		android:icon="@drawable/ic_action_search"
		android:title="@string/search_title"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:showAsAction="always|collapseActionView"/>

	<item
		android:id="@+id/menu_share"
		android:orderInCategory="200"
		android:title="@string/action_share"
		android:visible="false"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/menu_report"
		android:orderInCategory="300"
		android:title="@string/action_report"
		android:visible="false"
		app:showAsAction="never"/>

	<item
		android:id="@+id/menu_info"
		android:orderInCategory="400"
		android:title="@string/menu_info"
		app:showAsAction="never"/>

	<item
		android:id="@+id/menu_sync"
		android:orderInCategory="500"
		android:title="@string/menu_sync"
		app:showAsAction="never"/>

	<item
		android:id="@+id/menu_settings"
		android:orderInCategory="600"
		android:title="@string/menu_settings"
		app:showAsAction="never"/>

</menu>